k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: pankajg3432c/wisecow
        imagePullPolicy: Always
        ports:
        - containerPort: 4499
        readinessProbe:
          tcpSocket:
            port: 4499
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 3
        livenessProbe:
          tcpSocket:
            port: 4499
          initialDelaySeconds: 15
          periodSeconds: 10
          failureThreshold: 5
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
