k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  selector:
    app: wisecow
  type: NodePort
  ports:
  - name: http
    port: 4499
    targetPort: 4499
    nodePort: 30499
